prevent text adjustment on mobile.

--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -112,6 +112,10 @@ bottom:0px;
 font-size:10px;
 font-weight:bold;
 line-height:10px;
+-moz-text-size-adjust: none;
+-ms-text-size-adjust: none;
+-webkit-text-size-adjust: none;
+text-size-adjust: none;
 font-family:verdana, geneva, sans-serif;
 height:12px;
 width:12px;
